[metadata]
name = Flask-Multipass-CERN
version = 1.0-dev
license = MIT
description = CERN-specific Flask-Multipass providers
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark
author = Indico Team
author_email = indico-team@cern.ch
url = https://github.com/indico/flask-multipass-cern

[options]
zip_safe = false
py_modules =
    flask_multipass_cern
install_requires =
    flask-multipass[authlib]>=0.3.dev5


[options.extras_require]
dev =
  flake8
  flake8-colors
  flake8-quotes
  isort


[options.entry_points]
flask_multipass.auth_providers =
  cern = flask_multipass_cern:CERNAuthProvider
flask_multipass.identity_providers =
  cern = flask_multipass_cern:CERNIdentityProvider


[bdist_wheel]
universal = 1
