[metadata]
name = Flask-Multipass-CERN
version = 2.1
description = CERN-specific Flask-Multipass providers
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/flask-multipass-cern
license = MIT
author = Indico Team
author_email = indico-team@cern.ch

[options]
zip_safe = false
python_requires = ~=3.9.0
py_modules =
    flask_multipass_cern
install_requires =
    flask-multipass[authlib]>=0.4.3

[options.extras_require]
dev =
  flake8
  flake8-colors
  flake8-quotes
  isort

[options.entry_points]
flask_multipass.auth_providers =
  cern = flask_multipass_cern:CERNAuthProvider
flask_multipass.identity_providers =
  cern = flask_multipass_cern:CERNIdentityProvider
